# effect_based_interpreter

./: .gitignore  LICENSE  README.md  dune-project  effect_based_interpreter.opam
lib/: dune  interpreter.ml
test/: dune
