(lang dune 3.11)

(name effect_based_interpreter)

(generate_opam_files true)

(source
 (github Zeta611/effect_based_interpreter))

(authors "Jay Lee")

(maintainers "Jay Lee")

(license LICENSE)

(package
 (name effect_based_interpreter)
 (synopsis "Interpreter based on effects")
 (description "Interpreter based on effects")
 (depends ocaml dune)
 (tags (effects)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
